force-app/main/default/objects/PO_Line_Item__c/PO_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Itemized scope lines parsed from an incoming Purchase Order. Each line represents a work type and quantity. Compared against Community_Package__c scope fields during the Package Match Check stage.</description>
    <label>PO Line Item</label>
    <nameField>
        <displayFormat>PLI-{0000000}</displayFormat>
        <label>PO Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>