force-app/main/default/objects/PO_Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Mapped Product2 item for this source PO line.</description>
    <label>Item</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PO Line Items</relationshipLabel>
    <relationshipName>POLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>