force-app/main/default/objects/PO_Line_Item__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>Raw description text from the PO line item as received from the builder.</description>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>