force-app/main/default/objects/PO_Line_Item__c/fields/Match_Notes__c.field-meta.xml
<CustomField>
    <fullName>Match_Notes__c</fullName>
    <description>CSM or system notes explaining a mismatch, exception approval, or missing data finding for this line item.</description>
    <label>Match Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>