force-app/main/default/objects/PO_Line_Item__c/fields/Package_Match__c.field-meta.xml
<CustomField>
    <fullName>Package_Match__c</fullName>
    <description>Match result for this individual line item against Community_Package__c. Set by LOVING_PO_Package_Match_Check flow.</description>
    <label>Package Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Mismatched</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>