force-app/main/default/objects/PO_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity from the PO for this line item. Compared against the corresponding quantity field on Community_Package__c during match check.</description>
    <label>Quantity</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>