force-app/main/default/objects/PO_Line_Item__c/fields/Source_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Line_Number__c</fullName>
    <description>Original line number from the PO line table, used for idempotent OrderItem and Takeoff Line generation.</description>
    <label>Source Line Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>