force-app/main/default/objects/PO_Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Unit price preserved from the source PO line for OrderItem creation and takeoff review reference.</description>
    <label>Unit Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>